--- a/.massivewikibuilder/this-wiki-themes/basso/_navbar.html
+++ b/.massivewikibuilder/this-wiki-themes/basso/_navbar.html
@@ -21,9 +21,16 @@
         <a class="button is-light" href="/all-pages.html">
           All Pages
         </a>
-	<a class="button is-light" href="/search.html">
+        {% if lunr_posts_sitepath != '' %}
+        <a class="button is-light" onclick="location.href=lunr_posts[Math.floor(Math.random() * lunr_posts.length)].link">
+          Random Page
+        </a>
+        {% endif %}
+        {% if lunr_index_sitepath != '' %}
+        <a class="button is-light" href="/search.html">
           Search
         </a>
+        {% endif %}
 
       </div>
     </div>
